# halite3bdk

./: Cargo.toml  LICENSE.md  README.md
examples/: bot1.rs  bot2.rs  bot3.rs  bot4.rs  bot5.rs  logging.rs  run_bot.sh
replays/: replay-20200901-020030+0100-192883829-32-32.hlt
src/: command.rs  communication.rs  configuration.rs  direction.rs  dropoff.rs  game.rs  input.rs  lib.rs  logger.rs  map.rs  output.rs  player.rs  position.rs  random.rs  ship.rs  shipyard.rs
