[package]
name = "halite3bdk"
description = "Bot Development Kit for Halite III"
version = "0.1.0"
authors = ["Stjepan Golemac <stjepan.golemac@gmail.io>"]
edition = "2018"
homepage = "https://github.com/stjepangolemac/halite3bdk"
repository = "https://github.com/stjepangolemac/halite3bdk"
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["game", "bot", "development", "halite", "3"]
categories = ["game-development", "game-engines", "games", "simulation"]

[dependencies]
simplelog = "0.8.0"
log = "0.4.11"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
rand = "0.7.3"
